# asteroids_3d

./: Cargo.toml  build.rs  build_release.bat
res/: Asteroid.mtl  Spaceship.mtl
src/: camera.rs  cursor.wgsl  game.rs  hdr.rs  lib.rs  main.rs  model.rs  resources.rs  shader.wgsl  skybox.wgsl  texture.rs  ui.rs
