[package]
name = "asteroids_3d"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
winit = { version = "0.30", features = ["android-native-activity"] }
env_logger = "0.10"
log = "0.4"
wgpu = "28.0"
pollster = "0.3"
bytemuck = { version = "1.25.0", features = ["derive"] }
glam = { version = "0.32.1", features = ["bytemuck"] }
tobj = { version = "4.0.3", default-features = false, features = ["async"]}
instant = "0.1"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Other dependencies
reqwest = { version = "0.11" }
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
]}
instant = { version = "0.1", features = [ "wasm-bindgen" ] }